fix layout issues and added tasks ToDos

--- a/style.css
+++ b/style.css
@@ -393,16 +393,16 @@ body.list .btn-start {
   color: #fff;
   font-weight: bold;
   padding: 15px 0px;
-  width: 200px;
+  width: 90px;
   font-size: 18px;
   border-radius: 2px;
   text-decoration: none;
   pointer-events: all;
-  position: relative;
-  
-  margin: 0 0 0 -100px;
+  position: absolute;
+  /* margin: 0 0 0 -100px; */
   box-shadow: 0px 0px 0px 4px #3498db;
-  left: 50%;
+  left: 25%;
+  top: 10%;
 }
 
 body.list #reset {
